istio/consistent-hash.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts: #services do kubernetes
  - nginx-service
  http: #tipo de roteamento exemplo http, tcp e etc
    - route: 
      - destination:
          host: nginx-service
          subset: all # all é para todas requests  

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx
spec:
  host: nginx-service #services do kubernetes
  trafficPolicy:
    loadBalancer: 
      consistentHash:
        httpHeaderName: "x-user" 
  subsets: 
    - name: all 
      labels:
        app: nginx #todos os serviços que contém nginx
