istio/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts: #services do kubernetes
  - nginx-service
  http: #tipo de roteamento exemplo http, tcp e etc
    - route: 
      - destination:
          host: nginx-service
          subset: v1 # ele vem da Destination Rule  
        weight: 90 #porcentagem que enviaremos as requisições
      - destination:
          host: nginx-service
          subset: v2
        weight: 10
